tmp - CTU only loads the records now

--- a/clang/lib/Frontend/CMakeLists.txt
+++ b/clang/lib/Frontend/CMakeLists.txt
@@ -10,6 +10,7 @@ set(LLVM_LINK_COMPONENTS
   )
 
 add_clang_library(clangFrontend
+  AnalysisExtension.cpp
   ASTConsumers.cpp
   ASTMerge.cpp
   ASTUnit.cpp
